--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   logging: ^1.3.0
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
